@@ -15,6 +15,7 @@ version <next>:
 - adrawgraph audio and drawgraph video filter
 - removegrain video filter
 - Intel QSV-accelerated MPEG-2 video and HEVC encoding
+- libkvazaar HEVC encoder
 
 
 version 2.7:
